tests/vrml97/bad/proto-eventin-conflict.wrl
#VRML V2.0 utf8
PROTO Node [
  eventIn SFBool set_foo
  exposedField MFNode foo []
] {
  Group {}
}
Node {}
